# TrafyKamerasiKotlin

./: .gitignore  PROTOCOL_REFERENCE.md  gradle.properties  settings.gradle.kts  trafy_kamera_sistem_ozeti.md
.claude/: settings.json
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/example/trafykamerasikotlin/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/plate_ocr/: meta.txt
app/src/main/cpp/: CMakeLists.txt  util_log.h  yolo.cpp  yolo.h  yolo_jni.cpp
app/src/main/java/com/example/trafykamerasikotlin/: MainActivity.kt
app/src/main/java/com/example/trafykamerasikotlin/data/allwinner/: AllwinnerClient.kt  AllwinnerFrameCodec.kt  AllwinnerNetwork.kt  AllwinnerRtp2pClient.kt  AllwinnerSession.kt  LiveTsHttpServer.kt  MpegTsMuxer.kt
app/src/main/java/com/example/trafykamerasikotlin/data/capture/: AllwinnerCaptureRepository.kt
app/src/main/java/com/example/trafykamerasikotlin/data/generalplus/: GeneralplusMenuParser.kt  GeneralplusProtocol.kt  GeneralplusSession.kt
app/src/main/java/com/example/trafykamerasikotlin/data/handshake/: AllwinnerV853HandshakeHandler.kt  DashcamHandshakeManager.kt  EeasytechHandshakeHandler.kt  HandshakeHandler.kt  HiDvrHandshakeHandler.kt  JieliHandshakeHandler.kt  MstarHandshakeHandler.kt  MstarHzHandshakeHandler.kt  NovatekHandshakeHandler.kt  SigmaStarHandshakeHandler.kt
app/src/main/java/com/example/trafykamerasikotlin/data/media/: AllwinnerLiveRepository.kt  AllwinnerMediaRepository.kt  CamHttpGate.kt  DashcamImageLoader.kt  EeasytechLiveRepository.kt  EeasytechMediaRepository.kt  GeneralplusLiveRepository.kt  GeneralplusMediaRepository.kt  HiDvrMediaRepository.kt  HiDvrThumbnailFetcher.kt  MjpegRtspPlayer.kt
app/src/main/java/com/example/trafykamerasikotlin/data/model/: ChipsetProtocol.kt  DeviceInfo.kt  HandshakeResult.kt  MediaFile.kt  SettingItem.kt  TrafyModelIdentifier.kt
app/src/main/java/com/example/trafykamerasikotlin/data/network/: DashcamHttpClient.kt  WifiIpProvider.kt
app/src/main/java/com/example/trafykamerasikotlin/data/settings/: AiOverlayPreferences.kt  AllwinnerSettingsRepository.kt  AllwinnerTranslations.kt  EeasytechSettingsRepository.kt  EeasytechTranslations.kt  GeneralplusSettingsRepository.kt  GeneralplusTranslations.kt  HiDvrSettingsRepository.kt  HiDvrTranslations.kt
app/src/main/java/com/example/trafykamerasikotlin/data/shop/: TrafyImageLoader.kt  TrafyInternetRouting.kt  TrafyShopRepository.kt
app/src/main/java/com/example/trafykamerasikotlin/data/update/: CanonicalJson.kt  ManifestVerifier.kt  UpdateHttpClient.kt  UpdateInfo.kt  UpdateRepository.kt
app/src/main/java/com/example/trafykamerasikotlin/data/video/: AviMjpegReader.kt  GlOverlayPipeline.kt  InputSurfaceEgl.kt  OfflineVideoProcessor.kt  (+4 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/trafykamerasikotlin/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: export-yolo-ncnn.py  fetch-plate-ocr.py  setup-ncnn.sh  upload-release.sh  verify-16kb-alignment.sh
(+58 files in other folders)
